--- a/src/main/js/html/games.html
+++ b/src/main/js/html/games.html
@@ -4,6 +4,7 @@
       <h1>Games</h1>
       <div class="block-content form">
         <h3><a href="#flashcards">Alefbet Flashcards</a></h3>
+        <h3><a href="#dss_identifier">Deadsea Scroll Identifier</a></h3>
       </div>
     </div>
   </div>
