--- a/src/main/js/html/home.html
+++ b/src/main/js/html/home.html
@@ -1,26 +1,26 @@
 <section class="grid_12">
   <div class="block-border">
     <div class="block-content">
-      <h1>Welcome to the Mackabees Ministry</h1>
+      <h1>Welcome to dabar.cloud</h1>
       <div class="block-content form">
-        <h3>Who we are</h3>
+        <h3>About</h3>
         <p>
-          The Mackabees Ministry was created out of love for the Most High Yahuwah to teach people about Him, His Son
-          Yahushi and His Commandments that are found in His Law which is called the Torah. We believe that keeping His
-          Commandments is how you show love for Him (<scripture ref="1 John 5:3"/>), We are not to even think the
-          Messiah came to do away with His Commandments (<scripture ref="Matt 5:17"/>) and keeping them is a requirement
-          for everlasting life (<scripture ref="Matt 19:16-19"/>). This website is a resource to be used for those that
-          are waking up to who they are to learn how to get inline with our Abba (Father) in order to inherit the Kingdom.
+          Dabar דבר is the word for "word", "speak" or "spoke" in Hebrew. It is what is spoken to humble
+          servants of יהוה (<scripture ref="Gen 15:1,35:14-15, Exo 4:30,9:21,16:23"/>). We are
+          commanded to live by the spoken word of יהוה (<scripture ref="Exo 19:8, Matt 4:4, Luke 4:4"/>).
+          Here at dabar.cloud we present the word of יהוה alone with tools to help better understand
+          the word so that we can guard the words of the Torah and His Commandments which is the whole
+          duty of man (<scripture ref="Deut 17:19, Ecclesiastes 12:13, "/>)
         </p>
         <h3>Resources</h3>
-        <h4><a href="#/calendar?{{appCtrl.getIdTokenParameter()}}">Calendar<img src="images/icons/link_arrow.png"/></a></h4>
+        <h4><a href="#/calendar">Calendar<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           An implemenation of the 364 day calendar that is described in the Book of Enoch
           <scripture ref="Enoch 72" display="Chapter 72"/> and that we are Commanded to follow in
           <scripture ref="Jubilees 6:32-38"/>. Complete with the Holy Days clearly marked and an entire array of events
           that occured throughout the history that is detailed in our Set Apart Books.
         </p>
-        <h4><a href="#/read_the_word?{{appCtrl.getIdTokenParameter()}}">Read the Word<img src="images/icons/link_arrow.png"/></a></h4>
+        <h4><a href="#/read_the_word">Read the Word<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           Ability to read and search through all our books. With over 128 and growing different books and scrolls that
           make up the Canon, Deuterocanon (second canon), Apocrypha and scrolls such as from the DeadSea. Gives access
@@ -30,24 +30,37 @@
           and
           <a href="http://localhost:63342/DD4-Biblical/target/DD4-Biblical-1.0/index.html#/read_the_word?reference=NT%20Law">Law</a>.
         </p>
-        <h4><a href="#/the_law?{{appCtrl.getIdTokenParameter()}}">The Law<img src="images/icons/link_arrow.png"/></a></h4>
+        <h4><a href="#/the_law">The Law<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           Read and search through the Law. An extraction of the Law from the books of Genesis through Deuteronomy with a
           few from Jubilees with a brief description of each Law. Read the Laws and quickly search them to understand
           violations.
         </p>
-        <h4><a href="#/lessons?{{appCtrl.getIdTokenParameter()}}">Lessons<img src="images/icons/link_arrow.png"/></a></h4>
+        <h4><a href="#/lessons">Lessons<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           A collection of lessons designed to help people learn and grow. A mix of basic lessons for beginners and more
           advanced lessons. All can learn something from all lessons, every lesson created from scripture with lots of
           scriptural references.
         </p>
-        <h4><a href="#/timeline?{{appCtrl.getIdTokenParameter()}}">Timeline<img src="images/icons/link_arrow.png"/></a></h4>
+        <h4><a href="#/timeline">Timeline<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           A timeline derived from scripture that counts from the first day of creation, it uses the Bible accounts of
           things like age of father upon son, years of life of individuals, year lapse of certain events and reigns of
           Kings. Information is pulled from all books and vetted by the Canon scriptures. A lot of work is done to make
           sure dates of events are the most accurate.
+        </p>
+        <h4><a href="#/games">Games<img src="images/icons/link_arrow.png"/></a></h4>
+        <p>
+          A flashcard game that teaches the Hebrew letters in Modern, Ancient and Paleo Hebrew as
+          well as how the letter maps to English, Arabic and Samartian letters. Quiz yourself with
+          the letters and put yourself on the high score lists of easy, medium and hard.
+        </p>
+        <h4><a href="#/games">AI Chat<img src="images/icons/link_arrow.png"/></a></h4>
+        <p>
+          Chat with an AI LLM (Artificial Intelligence Large Language Model) trained on the Bible.
+          Ask it questions like: "How many sons did Abraham have?", "Where can I find the ten commandments?",
+          and "What does the Bible say about eating pork?". Quickly find scriptures that answer
+          life's questions.
         </p>
       </div>
     </div>
