--- a/src/main/js/html/scripture_selector.html
+++ b/src/main/js/html/scripture_selector.html
@@ -1,4 +1,4 @@
-<div id="eventModal" style="display: block;">
+<div style="display: block;">
   <div class="modal-window block-border">
     <ul class="action-tabs right">
       <li>
