--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
 
-    <title>Mackabees Ministry</title>
+    <title>dabar.cloud</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -70,11 +70,13 @@
     <!-- CryptoJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
+
+    <script src="js/lib/diff_match_patch.js"></script>
   </head>
 
   <body data-ng-app="biblical" data-ng-controller="DD4AppCtrl as appCtrl">
     <div data-ng-controller="biblicalCtrl as biblicalCtrl">
-      <h2><a href="#/home">Mackabees Ministry</a></h2>
+      <h2><a href="#/home">dabar.cloud</a></h2>
       | <a href="#/calendar">Calendar</a>
       | <a href="#/read_the_word">Read the Word</a>
       | <a href="#/the_law">The Law</a>
