More MCP work and refactors from common.

--- a/src/main/js/html/read_the_word.html
+++ b/src/main/js/html/read_the_word.html
@@ -41,7 +41,7 @@
             <div class="colx3-right">
               <label>View</label>
               <select data-ng-model="$ctrl.scriptureView" data-ng-change="$ctrl.getOrSearch()"
-                      data-ng-options="view for view in $ctrl.globalData.views"></select>
+                      data-ng-options="view for view in $ctrl.scripture_views"></select>
 
             </div>
           </div>
