Displaying of restored Hebrew instead of constantsOnly for Hebrew references.

--- a/src/main/js/html/lexicon_view.html
+++ b/src/main/js/html/lexicon_view.html
@@ -113,7 +113,7 @@
               {{reference.chapter}}</a>:<a href="" data-ng-click="$ctrl.showScripture(reference.version, reference.book, reference.chapter, reference.verse)">{{reference.verse}}</a>
             <a href="" data-ng-click="$ctrl.setReference(reference.reference)"><img src="images/icons/link_arrow.png" height="14"></a>
           </h3>
-          <p>{{reference.constantsOnly}} {{reference.translation}}</p>
+          <p>{{reference.restored}} {{reference.translation}}</p>
         </div>
         <fieldset>
             <span data-ng-repeat="page in $ctrl.references.pages">
