--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,6 +82,7 @@
       | <a href="#/the_law">The Law</a>
       | <a href="#/lessons">Lessons</a>
       | <a href="#/timeline">Timeline</a>
+      | <a href="#/family_tree">Family Tree</a>
       | <a href="#/games">Games</a>
       | <a href="#/chat">AI Chat</a>
       <span data-ng-if="appCtrl.globalData.runningLocal">
